fix animation overflow

--- a/client/src/style.sass
+++ b/client/src/style.sass
@@ -123,7 +123,6 @@ footer
   user-select: none
   height: 2rem
   .checkbox
-    -webkit-appearance: none
     font-size: 1em
     appearance: none
     width: 2em
@@ -184,6 +183,7 @@ footer
   .options
     width: 100%
     user-select: none
+    overflow: hidden
     justify-content: center
     background-color: $clr-2
     border-radius: 0 1rem 0 0
